# montype

./: .gitignore  MonType.cabal  README.md  build.sh  hie.yaml
.github/workflows/: main.yml
npm/: README.md  package.json
src/: Config.hs  Logger.hs  Main.hs  Utils.hs
src/Codegen/: Codegen.hs  Getters.hs  Helpers.hs  Helpers.hs-boot
src/Parser/: Descriptor.hs  Miscellaneous.hs  Property.hs  TopLevel.hs
src/Parser/Descriptors/: Array.hs  Helpers.hs  Object.hs  Object.hs-boot  Types.hs
